# in-memory-cache

./: main.py  pyproject.toml  setup.py
cache/: __init__.py  _cache.py
tests/: test_cache.py
