[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "InMemoryCache"
version = "0.0.3"
authors = [ { name="Amirreza Riahi", email="riahiamirreza79@gmail.com" } ]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Riahiamirreza/in-memory-cache"
